--- a/Termin-Kalender/frondend/src/index.css
+++ b/Termin-Kalender/frondend/src/index.css
@@ -4,7 +4,6 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background-color: #46529d;
     color: #fff;
 }
 .text-center1  {
@@ -13,7 +12,12 @@ body {
     padding-top: 30px;
     padding: 10px;
     font-size: 14px;
+    background-color: #253f3269;
+  
 
+}
+.text-center1-h1{
+    font-size: 20px;
 }
 .color{
     color: coral;
